--- a/layout.css
+++ b/layout.css
@@ -40,17 +40,12 @@
   padding: 0px 0 0 220px;
 }
 
-#menu {
-  width: 100%;
+.menu-wrap {
+  width:100%;
   height: 50px;
 }
 
-#menu ul {
-  height: 100%;
-  list-style: none;
-}
-
-#menu li {
+.menu li {
   height: 100%;
   display: inline;
   font-family: Arial, Helvetica, sans-serif;
@@ -58,18 +53,72 @@
   font-weight: bold;
 }
 
-#menu a {
-  height: 35px;
+.menu a {
+  transition:all linear 0.15s;
   display: block;
-  float: left;
   padding: 15px 15px 0 15px;
-  color: #000;
   text-decoration: none;
+  color: #000;
 }
 
-#menu a:hover {
+.menu li:hover > a, .menu .current-item > a {
+  text-decoration:none;
   color: #a45927;
   background: #000;
+}
+
+.menu .arrow {
+  font-size:11px;
+  line-height:0%;
+}
+
+/*----- Top Level -----*/
+.menu > ul > li {
+  float:left;
+  display:inline-block;
+  position:relative;
+}
+
+.menu > ul > li > a {
+  padding:10px 40px;
+  display:inline-block;
+}
+
+.menu > ul > li:hover > a, .menu > ul > .current-item > a {
+  background: #000;
+}
+
+
+.menu li:hover .sub-menu {
+  z-index:1;
+  opacity:1;
+}
+
+.sub-menu {
+  width:120%;
+        padding:5px 0px;
+        position:absolute;
+        top:100%;
+        left:0px;
+        z-index:-1;
+        opacity:0;
+        transition:opacity linear 0.15s;
+        box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+        background:#2e2728;
+}
+
+.sub-menu li {
+  display:block;
+}
+
+.sub-menu li a {
+  color: #a45927;
+  padding:10px 30px; 
+  display:block;
+}
+
+.sub-menu li a:hover, .sub-menu .current-item a {
+  background:#3e3436;
 }
 
 #content {
@@ -84,6 +133,11 @@
   text-align: center;
   background: #000;
   clear: both;
+}
+
+#footer a {
+  color: #FFF;
+  text-decoration: none;
 }
 
 html {
