--- a/basketbit/layout.css
+++ b/basketbit/layout.css
@@ -61,6 +61,7 @@
   text-decoration:none;
   color: #a45927;
   background: #000;
+  display: block;
 }
 
 .menu .arrow {
@@ -92,19 +93,23 @@
 
 .sub-menu {
   width:120%;
-        padding:5px 0px;
-        position:absolute;
-        top:100%;
-        left:0px;
-        z-index:-1;
-        opacity:0;
-        transition:opacity linear 0.15s;
-        box-shadow:0px 2px 3px rgba(0,0,0,0.2);
-        background:#2e2728;
+  padding:5px 0px;
+  position:absolute;
+  top:100%;
+  left:0px;
+  z-index:-1;
+  opacity:0;
+  transition:opacity linear 0.15s;
+  box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+  background:#2e2728;
+}
+
+.sub-menu ul {
+  display: none;
 }
 
 .sub-menu li {
-  display:block;
+  display: block;
 }
 
 .sub-menu li a {
@@ -115,6 +120,10 @@
 
 .sub-menu li a:hover, .sub-menu .current-item a {
   background:#3e3436;
+}
+
+.sub-menu li:hover ul {
+  display: block;
 }
 
 #content {
